# langchain-verse

./: .env  .gitignore  README.md  knowledge.md  main.py  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/datasets/: README.md
backend/datasets/raw/: README.md
backend/docker/postgres/: init.sql
backend/eval/: README.md
backend/ml/: README.md
backend/ml/features/: README.md  __init__.py  build_features.py  clean_transactions.py  run_pipeline.py
backend/ml/mlflow/: README.md  config.py
backend/ml/training/: README.md  __init__.py  data_utils.py  manifest.py  run_all_training.py  train_isolation_forest.py  train_lstm.py  train_meta_learner.py  train_xgboost.py
backend/scripts/: README.md
backend/scripts/preprocess_csv/: README.md
backend/services/api-gateway/: Dockerfile  pyproject.toml
backend/services/api-gateway/app/: main.py
backend/services/api-gateway/app/routers/: evaluate.py  health.py
backend/services/api-gateway/tests/: test_evaluate.py  test_health.py
backend/services/behavior-agent/: Dockerfile  main.py  pyproject.toml
backend/services/behavior-agent/app/: main.py  model_loader.py
backend/services/behavior-agent/app/routers/: evaluate.py  health.py
backend/services/behavior-agent/models/: .gitkeep
backend/services/behavior-agent/tests/: conftest.py  test_evaluate.py  test_health.py
backend/services/decision-otp-service/: Dockerfile  README.md  main.py  pyproject.toml
backend/services/decision-otp-service/app/: main.py
backend/services/decision-otp-service/app/routers/: health.py
backend/services/decision-otp-service/tests/: test_evaluate.py  test_health.py
backend/services/fraud-detection-pipeline/: Dockerfile  README.md  pyproject.toml
backend/services/fraud-detection-pipeline/app/: main.py  orchestrator.py
backend/services/fraud-detection-pipeline/app/agents/: __init__.py  behavior_agent.py  decision_agent.py  geo_agent.py  synthesis_agent.py  velocity_agent.py
backend/services/fraud-detection-pipeline/tests/: __init__.py  test_pipeline.py
backend/services/geo-agent/: Dockerfile  README.md  main.py  pyproject.toml
backend/services/geo-agent/app/: geo_check.py  main.py
backend/services/geo-agent/app/routers/: health.py
backend/services/geo-agent/tests/: test_evaluate.py  test_health.py
backend/services/synthesis-agent/: Dockerfile  README.md  main.py  pyproject.toml
backend/services/synthesis-agent/app/: main.py
backend/services/synthesis-agent/tests/: test_evaluate.py  test_health.py
backend/services/velocity-agent/: Dockerfile  README.md  pyproject.toml
backend/services/velocity-agent/app/: main.py
backend/services/velocity-agent/tests/: test_evaluate.py  test_health.py
backend/shared/constants/: service_names.py
backend/shared/explainability/: shap_utils.py
backend/shared/schemas/: risk.py
backend/tests/: test_services.py
fraud-detection-system/backend/: .gitignore  docker-compose.yml
fraud-detection-system/backend/docker/postgres/: init.sql
fraud-detection-system/backend/scripts/load_neo4j/: README.md
fraud-detection-system/backend/scripts/load_postgres/: README.md
fraud-detection-system/backend/services/api-gateway/: Dockerfile  README.md  pyproject.toml
fraud-detection-system/backend/services/behavior-agent/: README.md  pyproject.toml
fraud-detection-system/backend/services/behavior-agent/app/: main.py
fraud-detection-system/backend/services/geo-agent/: Dockerfile  README.md  pyproject.toml
fraud-detection-system/backend/services/geo-agent/app/: main.py
fraud-detection-system/backend/services/synthesis-agent/: pyproject.toml
fraud-detection-system/backend/services/synthesis-agent/app/routers/: health.py
fraud-detection-system/backend/services/velocity-agent/: Dockerfile  README.md  main.py  pyproject.toml
fraud-detection-system/backend/services/velocity-agent/app/routers/: health.py
fraud-detection-system/backend/shared/constants/: channels.py
fraud-detection-system/backend/shared/schemas/: __init__.py  events.py  risk.py
fraud-detection-system/backend/shared/utils/: redis_pubsub.py
langchain_verse/: __init__.py  config.py  main.py
