[project]
name = "langchain-verse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-mistralai>=1.1.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
