[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    
]

[tool.uv.workspace]
members = [
    "backend/services/geo-agent",
    "backend/services/velocity-agent",
    "backend/services/behavior-agent",
]
