[project]
name = "api-gateway"
version = "0.1.0"
description = "Public API gateway for fraud detection requests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.0.0",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
api-gateway = "main:main"

[tool.pytest.ini_options]
pythonpath = [".", "../.."]
testpaths = ["tests"]
asyncio_mode = "auto"
