[project]
name = "fraud-detection-pipeline"
version = "0.1.0"
description = "Unified FastAPI fraud detection pipeline with five internal agents."
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
    "neo4j",
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
