[project]
name = "behavior-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
]

[project.scripts]
behavior-agent = "main:main"
