[project]
name = "velocity-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.0.0",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
]

[project.scripts]
velocity-agent = "main:main"
